--- a/src/BlogCarousal.css
+++ b/src/BlogCarousal.css
@@ -6,6 +6,7 @@
 
 .thumbnail-section {
   /* no flexbox on scroll container */
+  position: relative;
   width: 500px;
   height: 500px;
   background-color: mediumturquoise;
@@ -15,6 +16,7 @@
 }
 
 .thumbnail-slide {
+  position: absolute;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
