fixed bug where multiple slideTimers could be attempting to move the screen at once by adding check, also made responsive

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     align-items: center; */
     width: 1000px;
     height: 600px;
-    background-color: darkgrey;
+    background-color: silver;
     margin: 0;
 }
 
