--- a/src/BlogCarousal.css
+++ b/src/BlogCarousal.css
@@ -1,48 +1,104 @@
+/* mobile design */
+
 .blog-carousal {
-  width: 500px;
-  height: 500px;
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid blue;
+}
+
+.carousal {
+  width: 320px;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .thumbnail-section {
-  /* no flexbox on scroll container */
+  width: 320px;
+  height: 320px;
   position: relative;
-  width: 500px;
-  height: 500px;
-  background-color: mediumturquoise;
   overflow-y: hidden;
   overflow-x: hidden;
-  border: 5px solid purple;
 }
 
 .thumbnail-slide {
+  width: 1600px;
+  height: 320px;
   position: absolute;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 2500px;
-  height: 500px;
+  border: 1px solid purple;
 }
 
 .thumbnail {
-  height: 500px;
-  width: 500px;
-  background-color: navy;
-  border: 1px solid darkred;
+  width: 320px;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.blog-browse {
+.user-select {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 500px;
-  height: 100px;
-  background-color: blue;
+  width: 320px;
+  height: 64px;
+  border: 1px solid magenta;
 }
 
-.blog-select {
-  width: 50px;
-  height: 50px;
+.select-button {
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
-  background-color: magenta;
+  background-color: rgb(19, 18, 18);
+}
+
+/* desktop design */
+
+@media (min-width: 800px) {
+  .blog-carousal {
+    width: 800px;
+    height: 800px;
+    border: 1px solid purple;
+  }
+
+  .carousal {
+    width: 500px;
+    height: 500px;
+    border: 1px solid rgb(19, 18, 18);
+  }
+
+  .thumbnail-section {
+    width: 500px;
+    height: 500px;
+  }
+
+  .thumbnail-slide {
+    width: 2500px;
+    height: 500px;
+  }
+
+  .thumbnail {
+    width: 500px;
+    height: 500px;
+  }
+
+  .user-select {
+    width: 500px;
+    height: 100px;
+    border: 1px solid rgb(19, 18, 18);
+  }
+
+  .select-button {
+    width: 50px;
+    height: 50px;
+    background-color: rgb(19, 18, 18);
+  }
 }
