--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     align-items: center; */
     width: 1000px;
     height: 600px;
-    background-color: silver;
+    background-color: rgb(19, 18, 18);
     margin: 0;
 }
 
